--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "node-telegram-bot-api": "^0.51.0",
     "nodemon": "^2.0.7",
     "simple-node-logger": "^18.12.24"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
